<resources>
    <string name="app_name">TeleFood</string>
    <string name="title_home">Home</string>
    <string name="title_meals">Meals</string>
    <string name="title_add_ads">Add</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_more">More</string>
    <string name="title_notification">Notification</string>
    <string name="title_chat">Chat</string>
    <string name="title_activity_on_boarding">OnBoardingActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="title_first_board">Register</string>
    <string name="title_sec_board">Advertise and search</string>
    <string name="title_third_board">Contact</string>
    <string name="desc_first_board">Come on, you are welcome. Register with us and join our family.</string>
    <string name="desc_sec_board">Our application will help you to advertise and benefit from your home cooking and present it to the largest possible number of customers who want to cook home, where they can search and get what they want.</string>
    <string name="desc_third_board">For ease of dealing we have provided instant conversations between the client and the productive families.</string>
    <string name="desc_user_type">Providing the craft, which is to provide your home cooking and you can go in and shop for home meals by choosing to order a commodity.</string>
    <string name="action_skip">skip</string>
    <string name="title_start">let\'s start</string>
    <string name="title_last_board">what do you want?</string>
    <string name="title_consumer_type">Request a Product</string>
    <string name="title_provider_type">I want to Product an item</string>

    <string name="desc_login">Enter the phone number and password to log into your account.</string>
    <string name="desc_sign_up">Enter the required information completely and correctly.</string>
    <string name="desc_enter_phone">Password recovery, enter the phone number that you previously registered with.</string>
    <string name="desc_verify_code">Enter the verification code sent to your phone.</string>
    <string name="desc_reset_password">Enter the new password and confirm it.</string>

    <string name="title_login">Login</string>

    <string name="title_reset_password">Reset Password</string>
    <string name="title_sign_up">Sign up</string>
    <string name="label_phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="label_login_as_guest">visitor</string>
    <string name="label_forget_password">Forgot your password</string>
    <string name="label_full_name">Full Name</string>
    <string name="label_governorate">governorate</string>
    <string name="label_city">City</string>
    <string name="agree_privacy_policy">I agree to the privacy and use policy</string>
    <string name="title_check">Check</string>
    <string name="action_resend_code">I did not receive any code?<font fgcolor='#C3245D'><b>Resend</b></font></string>
    <string name="title_enter_phone_number">Enter a phone number</string>
    <string name="title_confirm_code">Confirm the code</string>
    <string name="label_send">Send</string>
    <string name="label_confirm_password">Confirm password</string>
    <string name="label_new_password">Confirm new password</string>
    <string name="label_search">Search</string>
    <string name="label_product_name">Product name</string>
    <string name="title_note_add_image">Attach a maximum of 5 product photos</string>
    <string name="label_product_price">Price</string>
    <string name="label_product_desc">Description</string>
    <string name="label_category">Category</string>
    <string name="title_product">Products</string>
    <string name="title_provider">Service Providers</string>
    <string name="title_edit_account_info">Modify account information</string>
    <string name="title_address">Address</string>
    <string name="label_save">Save</string>
    <string name="title_subscription_renewal">Subscription renewal</string>
    <string name="title_account_info">Account details</string>
    <string name="label_bank_name">Bank name:</string>
    <string name="label_account_number">Account number:</string>
    <string name="label_the_full_name">Full Name:</string>
    <string name="label_iban">IBAN:</string>
    <string name="title_transfer_picture">Transfer Picture</string>
    <string name="title_note_add_transfer_picture">attach the image of the transfer clearly</string>
    <string name="title_choose_subscription_package">Choose a subscription package</string>
    <string name="label_old_password">Old Password</string>
    <string name="title_setting">Setting</string>

    <string-array name="category_array">
        <item>Cake</item>
        <item>Coffee</item>
        <item>Drinks</item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="notification_header">الاشعارات</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="label_enable_app_notification">App notifications alert</string>

    <string name="label_my_ads">My Products</string>
    <string name="label_providers">Providers</string>
    <string name="label_support">Technical Support</string>
    <string name="label_privacy_policy">Privacy Policy</string>
    <string name="label_about_app">About us</string>
    <string name="label_change_password">Change Password</string>
    <string name="label_sign_out">Sign out</string>
    <string name="language_header">Language</string>
    <string name="label_language">App Language</string>
    <string name="label_edit_my_ads">Edit Product</string>
    <string name="label_notification">Notifications</string>
    <string name="label_providers_details">Providers Details</string>
    <string name="label_contact_us">Contact us</string>
    <string name="desc_support">We are here for you, tell us what\'s on your mind?</string>
    <string name="label_subject">Subject</string>
    <string name="label_details">Details</string>
    <string name="title_contact_info">Contact Info</string>
    <string name="label_promotion_detail">Product Details</string>
    <string name="label_back">back</string>
    <string name="message_sent_successfully">Sent Successfully</string>
    <string name="label_delete_promotion">Delete Product</string>
    <string name="title_delete_ads_message">Do you want to delete this product?</string>
    <string name="label_delete">delete</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_filter_results">Filter Result</string>
    <string name="hint_type_message">type message</string>
    <string name="error_msg_no_connection">Connection failed Check your network connection</string>
    <string name="title_error_message">Error Message</string>
    <string name="error_message_un_authorized">Your session has expired, please log in again</string>
    <string name="label_bank_name_p">palestine</string>

    <string name="error_msg_missing_profile_image_required">You must enter a personal image</string>
    <string name="error_msg_missing_name">The name field is required</string>
    <string name="error_msg_missing_product_name">The product name field is required</string>
    <string name="error_msg_missing_price">The price field is required</string>
    <string name="error_msg_missing_desc">The Description field is required</string>
    <string name="error_msg_missing_phone_number">The phone number field is required</string>
    <string name="error_msg_missing_city">The city field is required</string>
    <string name="error_msg_missing_governorate">The governorate field is required</string>
    <string name="error_msg_missing_password">The password field is required</string>
    <string name="error_msg_missing_verification_code">Enter the code we sent you</string>
    <string name="error_msg_missing_category">The category field is required</string>
    <string name="error_msg_missing_subject">The subject field is required</string>
    <string name="hint_add_your_image_profile">Add your personal photo</string>
    <string name="title_request_permission">Request permission</string>
    <string name="msg_request_permission">You must be granted access permission to be able to choose an image</string>
    <string name="error_msg_mismatched_verification">The code you have entered is incorrect</string>
    <string name="invalid_phone_number">Invalid phone number.</string>
    <string name="msg_resend_code_successful">The code has been re-sent</string>
    <string name="message_request_success">message</string>
    <string name="error_msg_missing_package">Choose the subscription package</string>
    <string name="label_remove">remove</string>
    <string name="error_msg_missing_ads_images">Attach the product image</string>
    <string name="unknown">Unknown</string>
    <string name="clear_filter">Clear filter</string>
    <string name="msg_visitor_login">Sorry, you have to log in to your account first do you have an account?</string>
    <string name="bind_price">%s SAR</string>
    <string name="title_empty_status_product">There is no product matching the search result</string>
    <string name="label_edit_promotion">Edit Promotion</string>
    <string name="label_open">Open</string>
    <string name="label_closed">Closed</string>
    <string name="title_note_add_attach">Attach files (optional)</string>
    <string name="title_all">All</string>
    <string name="label_attach_file">Attach a file</string>
    <string name="label_attach_photos">Attach photos</string>
    <string name="title_empty_status_favorite_providers">There is no provider in your favorites!</string>
    <string name="title_empty_status_favorite_product">There is no product in your wishlist!</string>
    <string name="days_left">%s days left</string>
    <string name="not_subscribed">Not subscribed</string>
    <string name="error_msg_missing_placeholder">Mark the location</string>
    <string name="permission_request">Permission Request</string>
    <string name="alert_msg_map_permission">You must grant permission to use the location in order to be able to determine your location</string>
    <string name="label_service_provider">Service provider</string>
    <string name="label_customer">Customer</string>


</resources>
