<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/selector_menu_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_meals"
        android:icon="@drawable/selector_menu_meals"
        android:title="@string/title_meals" />

    <item
        android:id="@+id/navigation_add_ads"
        android:icon="@drawable/selector_menu_add"
        android:title="@string/title_add_ads" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/selector_menu_favorite"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/selector_menu_more"
        android:title="@string/title_more" />

</menu>