<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bik.telefood.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_meals"
        android:name="com.bik.telefood.ui.meals.MealsFragment"
        android:label="@string/title_meals"
        tools:layout="@layout/fragment_meals" />

    <fragment
        android:id="@+id/navigation_add_ads"
        android:name="com.bik.telefood.ui.ads.AdsFragment"
        android:label="@string/title_add_ads"
        tools:layout="@layout/fragment_ads" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.bik.telefood.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.bik.telefood.ui.more.moreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />
</navigation>