<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.ui.ConfirmCodeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            style="@style/ColoredTitleTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/title_confirm_code"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_bank_name"
            style="@style/SubTitleTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/size_small"
            android:text="@string/desc_first_board" />

        <com.alimuzaffar.lib.pin.PinEntryEditText
            android:id="@+id/pin_entry_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_xx_large"
            android:cursorVisible="false"
            android:maxLength="5"
            android:textSize="20sp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_check_code"
            style="@style/GradientButtonTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_xlarge"
            android:text="@string/title_check" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/size_regular"
            android:text="@string/action_resend_code" />

    </LinearLayout>
</ScrollView>