<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout_bank_info"
    style="@style/CardViewTheme"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="0dp"
    tools:cardUseCompatPadding="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_layout">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            style="@style/ColoredTitleTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_account_info"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_bank_name"
            style="@style/SubTitleTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_mid"
            android:text="@string/label_bank_name_p"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_account_number"
            style="@style/SubTitleTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_mid"
            android:text="@string/label_account_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_bank_name" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_full_name"
            style="@style/SubTitleTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_mid"
            android:text="@string/label_full_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_account_number" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_iban"
            style="@style/SubTitleTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_mid"
            android:text="@string/label_iban"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_full_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>