<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.ResetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_layout">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/shapeableImageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_regular"
            app:srcCompat="@drawable/ic_logo" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            style="@style/ColoredTitleTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/size_xx_large"
            android:text="@string/title_reset_password"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_bank_name"
            style="@style/SubTitleTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/size_small"
            android:text="@string/desc_reset_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_password"
            style="@style/InputLayoutTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_large">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/label_new_password"
                android:inputType="textPassword"
                android:textAlignment="viewStart"
                app:endIconMode="password_toggle" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_confirm_password"
            style="@style/InputLayoutTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_large">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/label_confirm_password"
                android:inputType="textPassword"
                android:textAlignment="viewStart"
                app:endIconMode="password_toggle" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            style="@style/GradientButtonTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_xlarge"
            android:text="@string/label_save" />

    </LinearLayout>
</ScrollView>