<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.more.ChangePasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_layout">

        <com.google.android.material.textview.MaterialTextView
            style="@style/SubTitleTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_xlarge"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="@dimen/size_small"
            android:fontFamily="@font/cairo_semibold"
            android:text="@string/label_change_password"
            android:textSize="@dimen/text_size_regular"
            app:drawableTint="@color/maroon_flush" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_old_password"
            style="@style/InputLayoutTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_xlarge">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_old_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/label_old_password"
                android:inputType="textPassword"
                android:textAlignment="viewStart" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_password"
            style="@style/InputLayoutTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_large">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/label_new_password"
                android:inputType="textPassword"
                android:textAlignment="viewStart" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_confirm_password"
            style="@style/InputLayoutTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_large">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/label_confirm_password"
                android:inputType="textPassword"
                android:textAlignment="viewStart" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            style="@style/GradientButtonTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_xlarge"
            android:text="@string/label_save" />

    </LinearLayout>
</ScrollView>